# heaven

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  Toolchain-MinGW64.cmake  main.c  todo
include/: camera.h  geometry.h  object.h  readfile.h  render.h  shader.h  texture.h
resources/: test.txt
resources/geometry/: cube.txt  exercise1.txt  exercise2-1.txt  exercise2-2.txt  quad.txt  tri.txt
resources/shader/: fragmentShader-Color.glsl  fragmentShader-CustomColor.glsl  fragmentShader-Default.glsl  fragmentShader-Exercise3.glsl  fragmentShader-Mix.glsl  vertexShader-Default.glsl  vertexShader-Exercise1.glsl  vertexShader-Exercise2.glsl  vertexShader-Exercise3.glsl  vertexShader-Transform.glsl
src/: camera.c  geometry.c  main.c  object.c  readfile.c  render.c  shader.c  texture.c
